cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    defines = select({
        "//conditions:default": ["IS_ROBORIO_TEST=0"],
        "@rules_bzlmod_toolchains//constraints/is_bullseye_32:bullseye-32": ["IS_BULLSEYE_TEST=1"],
        "@rules_bzlmod_toolchains//constraints/is_roborio:roborio": ["IS_ROBORIO_TEST=1"],
    }),
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    defines = select({
        "//conditions:default": ["IS_ROBORIO_TEST=0"],
        "@rules_bzlmod_toolchains//constraints/is_bullseye_32:bullseye_32": ["IS_BULLSEYE_TEST=1"],
        "@rules_bzlmod_toolchains//constraints/is_roborio:roborio": ["IS_ROBORIO_TEST=1"],
    }),
    deps = [
        "@googletest//:gtest_main",
    ],
)
